[package]
name = "divWallet-solana-rust"
description = "Manage rental agreements between 2 parties using Solana to record transactions. Written in Rust."
version = "0.2.0"
license = "Apache-2.0"
authors = ["Dario Vazzan <gotchasd16@gmail.com>"]
edition = "2022"

[features]
exclude_entrypoint = []

[dependencies]
solana-program = "=1.7.4"
thiserror = "1.0.25"
borsh = "0.9.0" 
borsh-derive = "0.9.0" 

[dev-dependencies]
#solana-program-test = "=1.7.4"
#solana-sdk = "=1.7.1"

[lib]
name = "rentshare"
crate-type = ["cdylib", "lib"]
